Added component properties and events

--- a/projects/ngx-floating-img-tester/src/app/app.component.html
+++ b/projects/ngx-floating-img-tester/src/app/app.component.html
@@ -1,5 +1,34 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<h1>TEST</h1>
-<hr>
-<fi-ngx-floating-img></fi-ngx-floating-img>
+<div style="width: 500px;margin-left: 200px;">
+    <h1>TEST 1</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <hr>
+    <fi-ngx-floating-img [imgWidth]="1164" [imgHeight]="545">
+        <img src="./assets/thumbs/audi_small.jpg">
+    </fi-ngx-floating-img>
+    <hr>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <h1>TEST 2</h1>
+    <button>fwef</button>
 
+</div>
