--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
@@ -4,7 +4,6 @@
     text-align: center;
     width: 100%;
     height: 100%;
-    background: #f0f0f0;
 }
 
 /* wrapper */
@@ -25,19 +24,10 @@ figure {
     line-height: 0px; 
 }
 
-
 figure::ng-deep img {
     width: 100%;
     height: auto;
     
-}
-
-figure .fi-img-container {
-    /* background: #cd3232; */
-}
-
-figure .fi-img-container > div {
-    /* background: #ccc; */
 }
 
 figure .fi-img-container.show-full-img {
@@ -46,19 +36,11 @@ figure .fi-img-container.show-full-img {
     right: 0px;
     top: 0px;
     bottom: 0px;
-    z-index: 99999;
+    z-index: 999999;
 }
 
-figure .fi-img-container.show-full-img > div {
+figure .fi-img-container.show-full-img .fi-img-wrapper {
     position: absolute;
-    left: 10px;
-    top: 10px;
-    right: 10px;
-    bottom: 10px;
-}
-
-figure .fi-img-container.show-full-img > div > div {
-    transition: all 0.2s ease-out;
 }
 
 
