Added more functionalities

--- a/projects/ngx-floating-img-tester/src/app/app.component.html
+++ b/projects/ngx-floating-img-tester/src/app/app.component.html
@@ -8,7 +8,7 @@
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <hr>
-    <fi-ngx-floating-img [imgWidth]="1164" [imgHeight]="545" [vpPadding]="10" [thumbBgColor]="testColor">
+    <fi-ngx-floating-img [imgWidth]="1164" [imgHeight]="545" [vpPadding]="10" [thumbBgColor]="testColor" [imgSrc]="'./assets/original/audi_large.jpg'">
         <img src="./assets/thumbs/audi_small.jpg">
     </fi-ngx-floating-img>
     <hr>
