--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
@@ -47,5 +47,62 @@ figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper {
     position: relative;
 }
 
+figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper img.fi-img-full {
+    display: none;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 10;
+}
+
+figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper.fi-img-full-loaded img.fi-img-full {
+    display: block;
+}
+
+figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper .fi-img-top-bar {
+    position: absolute;
+    z-index: 20;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    text-align: right;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0));
+    background: -webkit-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0));
+    background: -moz-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0));
+    background: -o-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0));
+    background: -ms-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0));
+}
+
+figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper .fi-img-top-bar .fi-close-button {
+    padding: 0;
+    background: transparent;
+    border: none;
+    width: 34px;
+    height: 34px;
+    line-height: 0px;
+    font-size: 18px;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    margin: 0px;
+}
+
+figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper .fi-img-bottom-bar {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 2px;
+    z-index: 20;
+    background-repeat: repeat;
+    background-image: linear-gradient(90deg, transparent 0%, transparent 50%, #fff 50%, #fff 100%);
+    animation: movebar 0.5s linear infinite;
+    background-size: 10px 10px;
+}
+
+@keyframes movebar {
+    from {background-position: 0 0;}
+    to {background-position: 10px 10px;}
+}
+
 
 
