Fixed image scalling

--- a/projects/ngx-floating-img-tester/src/app/app.component.html
+++ b/projects/ngx-floating-img-tester/src/app/app.component.html
@@ -17,6 +17,11 @@
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
+    <div style="width: 200px;">
+        <fi-ngx-floating-img [imgWidth]="1950" [imgHeight]="1300" [vpPadding]="50" [imgSrc]="'./assets/original/image3_large.jpg'">
+            <img src="./assets/thumbs/image3_small.jpg">
+        </fi-ngx-floating-img>
+    </div>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
@@ -24,11 +29,17 @@
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
+    <fi-ngx-floating-img [imgWidth]="2555" [imgHeight]="3194" [vpPadding]="50" [imgSrc]="'https://images.pexels.com/photos/1887629/pexels-photo-1887629.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'">
+        <img src="./assets/thumbs/image1_small.jpeg">
+    </fi-ngx-floating-img>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <button>fwef</button>
+    <fi-ngx-floating-img [imgWidth]="1920" [imgHeight]="2877" [vpPadding]="0" [imgSrc]="'./assets/original/image2_large.jpeg'">
+        <img src="./assets/thumbs/image2_small.jpeg">
+    </fi-ngx-floating-img>
 
 </div>
