--- a/projects/ngx-floating-img-tester/src/styles.css
+++ b/projects/ngx-floating-img-tester/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper .fi-img-bottom-bar {
+    background-color: #cd323287;
+}
