--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.html
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.html
@@ -2,7 +2,7 @@
     <div class="fi-ele-wrapper">
         <figure #imgFigure> 
             <div class="fi-img-container" [ngClass]="{'show-full-img': showFullImgTrigger}"  
-                [style.background-color]="showFullImgInProgress ? overlayColor : 'rgba(0,0,0,0)'" [ngStyle]="overlayTransition"  (click)="closeFullImg($event)">
+                [style.background-color]="isShowFullImgInProgress ? overlayColor : 'rgba(0,0,0,0)'" [ngStyle]="overlayTransition"  (click)="closeFullImg($event)">
                 <div #imgWrapper class="fi-img-wrapper" [ngStyle]="imgWrapperStyle">
                     <div #imgInnerWrapper class="fi-img-inner-wrapper" [ngClass]="{'fi-img-fully-loaded': showFullImgTrigger}" [ngStyle]="imgInnerWrapperTransition" 
                         (click)="showFullImg()">
