Scaling bug fix

--- a/projects/ngx-floating-img-tester/src/app/app.component.html
+++ b/projects/ngx-floating-img-tester/src/app/app.component.html
@@ -38,7 +38,7 @@
     <h1>TEST 2</h1>
     <h1>TEST 2</h1>
     <button>fwef</button>
-    <fi-ngx-floating-img [overlayColor]="'#fff'" [overlayAnimation]="true" [imgWidth]="1920" [imgHeight]="2877" [vpPadding]="0" [imgSrc]="'./assets/original/image2_large.jpeg'">
+    <fi-ngx-floating-img [overlayColor]="'#000'" [overlayAnimation]="true" [imgWidth]="1920" [imgHeight]="2877" [vpPadding]="0" [imgSrc]="'./assets/original/image2_large.jpeg'">
         <img src="./assets/thumbs/image2_small.jpeg">
     </fi-ngx-floating-img>
 
