--- a/projects/ngx-floating-img-tester/src/styles.css
+++ b/projects/ngx-floating-img-tester/src/styles.css
@@ -1,4 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
-figure .fi-img-container .fi-img-wrapper .fi-img-inner-wrapper .fi-img-bottom-bar {
-    background-color: #cd323287;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-wrapper {
+    width: 80%;
+    margin: 0 auto;
 }
