Added sass structure

--- a/projects/ngx-floating-img-tester/src/styles/_mixins.scss
+++ b/projects/ngx-floating-img-tester/src/styles/_mixins.scss
@@ -99,3 +99,39 @@
     -o-animation: $animation;
     animation: $animation;      
 }
+
+@mixin small-vp {
+    @media screen and (max-width: $small-viewport-breakpoint - 1px) {
+        @content;
+    }
+}
+
+@mixin medium-vp {
+    @media screen and (min-width: $small-viewport-breakpoint) and (max-width: $medium-viewport-breakpoint - 1px) {
+        @content;
+    }
+}
+
+@mixin large-vp {
+    @media screen and (min-width: $medium-viewport-breakpoint ) and (max-width: $large-viewport-breakpoint - 1px) {
+        @content;
+    }
+}
+
+@mixin x-large-vp {
+    @media screen and (min-width: $large-viewport-breakpoint ) and (max-width: $x-large-viewport-breakpoint - 1px) {
+        @content;
+    }
+}
+
+@mixin xx-large-vp {
+    @media screen and (min-width: $x-large-viewport-breakpoint ) and (max-width: $xx-large-viewport-breakpoint - 1px) {
+        @content;
+    }
+}
+
+@mixin x-large-vp {
+    @media screen and (min-width: $xx-large-viewport-breakpoint ) {
+        @content;
+    }
+}
