--- a/projects/ngx-floating-img-tester/src/app/common/header/header.component.html
+++ b/projects/ngx-floating-img-tester/src/app/common/header/header.component.html
@@ -1,3 +1,14 @@
-<p>
-  header works!
-</p>
+<header>
+  <div fitMainWrapper>
+    <div id="main-logo-container"><a>ngx-floating-img</a></div>
+    <div id="main-nav-bar-container">
+      <nav>
+        <ul>
+          <li><a>home</a><span></span></li>
+          <li><a>examples</a><span></span></li>
+          <li><a>api</a><span></span></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
