--- a/projects/ngx-floating-img-tester/src/styles/_variables.scss
+++ b/projects/ngx-floating-img-tester/src/styles/_variables.scss
@@ -1,1 +1,14 @@
 $browser-context: 14;
+
+$fit-main-wrapper-width-small: 400px;
+$fit-main-wrapper-width-medium: 460px;
+$fit-main-wrapper-width-large: 580px;
+$fit-main-wrapper-width-x-large: 758px;
+$fit-main-wrapper-width-xx-large: 971px;
+$fit-main-wrapper-width-default: 1179px;
+
+$small-viewport-breakpoint: 480px;
+$medium-viewport-breakpoint: 600px;
+$large-viewport-breakpoint: 768px;
+$x-large-viewport-breakpoint: 991px;
+$xx-large-viewport-breakpoint: 1199px;
