--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -1,3 +1,104 @@
-<p>
-  home works!
-</p>
+<div>
+    <header>
+      <div fitMainWrapper>
+          <div class="info-wrapper">
+            <h1 class="sub-title">ngx-floating-img</h1>
+            <p>Mobile look and feel image viewer for Angular 6+</p>
+          </div>
+          <div class="installation-wrapper">
+            <h2 class="sub-title">installation</h2>
+            <ul>
+              <li>
+                <p>Add ngxfloatingimg to your Angular project</p>
+                <code>npm install --save ngx-floating-img</code>
+              </li>
+              <li>
+                <p>Once installed import NgxFloatingImgModule in your app.module.ts</p>
+                <pre><code>imports: [ ... NgxFloatingImgModule.forRoot() ... ]</code></pre>
+              </li>
+              <li>
+                <p>Add it in your template file</p>
+                <code>&lt;ngx-floating-img [width]="$fullImgWidth" [height]="$fullImgHeight"&gt;&lt;ngx-floating-img&gt;</code>
+              </li>
+            </ul>
+          </div>
+      </div>
+  </header>
+  <div id="home-main-container" fitMainWrapper>
+    <fit-section id="demo-section" title="demo">
+      
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1932" [imgSrc]="'../../../assets/original/img_2.jpeg'">
+            <img src="../../../assets/thumbs/img_2.jpeg" />
+          </ngx-floating-img>
+        </div>
+        <div>
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [imgSrc]="'../../../assets/original/img_12.jpeg'">
+            <img src="../../../assets/thumbs/img_12.jpeg" />
+          </ngx-floating-img>
+        </div>
+      </div>
+      
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="2000" [imgHeight]="1496" [imgSrc]="'../../../assets/original/img_10.jpg'">
+            <img src="../../../assets/thumbs/img_10.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1600" [imgSrc]="'../../../assets/original/img_13.jpeg'">
+            <img src="../../../assets/thumbs/img_13.jpeg" />
+          </ngx-floating-img>
+        </div>
+      </div>
+      
+      <div class="img-wrapper">
+        <div>
+            <ngx-floating-img [imgWidth]="1239" [imgHeight]="1800" [imgSrc]="'../../../assets/original/img_7.jpg'">
+            <img src="../../../assets/thumbs/img_7.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="799" [imgSrc]="'../../../assets/original/img_11.jpeg'">
+            <img src="../../../assets/thumbs/img_11.jpeg" />
+          </ngx-floating-img>
+        </div> 
+      </div>
+      
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1440" [imgSrc]="'../../../assets/original/img_22.jpeg'">
+            <img src="../../../assets/thumbs/img_22.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1600" [imgSrc]="'../../../assets/original/img_23.jpeg'">
+            <img src="../../../assets/thumbs/img_23.jpeg" />
+          </ngx-floating-img>
+        </div>
+      </div>
+      
+      <div class="img-wrapper">
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [imgSrc]="'../../../assets/original/img_20.jpeg'">
+            <img src="../../../assets/thumbs/img_20.jpeg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="857" [imgSrc]="'../../../assets/original/img_19.jpeg'">
+            <img src="../../../assets/thumbs/img_19.jpeg" />
+          </ngx-floating-img>
+        </div> 
+      </div>
+
+      
+     
+      
+     
+      
+      
+     
+       
+    </fit-section>
+</div>
