--- a/projects/ngx-floating-img-tester/src/styles/main.scss
+++ b/projects/ngx-floating-img-tester/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "imports";
 
 :root {
+    color: $theme-main-font-color;
     font-family: Arial, Helvetica, sans-serif;
     font-size: #{$browser-context}px;
 }
@@ -18,9 +19,45 @@ ul {
     list-style: none;
 }
 
+a {
+    color: $theme-main-font-color;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+h1,h2,h3,h4,h5,h6,p,pre {
+    margin: 0px;
+    padding: 0px;
+    font-weight: normal;
+}
+
+code {
+    padding: rem(10);
+    background: #e9e9e9;
+    color: #333;
+    display: block;
+    margin-top: rem(10);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.sub-title {
+    font-size: rem(18);
+    text-transform: uppercase;
+    padding-bottom: $main-padding;
+}
+
 .fit-main-wrapper {
     margin: 0 auto;
     width: $fit-main-wrapper-width-default;
+}
+
+@include mobile-vp {
+    .fit-main-wrapper {
+        width: $fit-main-wrapper-width-mobile;
+    }
 }
 
 @include small-vp {
@@ -44,11 +81,5 @@ ul {
 @include x-large-vp {
     .fit-main-wrapper {
         width: $fit-main-wrapper-width-x-large;
-    }
-}
-
-@include xx-large-vp {
-    .fit-main-wrapper {
-        width: $fit-main-wrapper-width-xx-large;
     }
 }
