--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
@@ -1,3 +1,9 @@
+:host {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+}
+
 /* main container */
 .fi-ele-container {
     position: relative;
