Added home page

--- a/projects/ngx-floating-img-tester/src/app/common/header/header.component.html
+++ b/projects/ngx-floating-img-tester/src/app/common/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="header-container" fitMainWrapper>
-      <div id="main-logo-container"><a routerLink="/home">ngx-floating-img</a></div>
+      <div id="main-logo-container"><a routerLink="/home">NGX-FLOATING-IMG</a></div>
       <div id="main-nav-bar-container">
         <nav>
           <ul>
