--- a/projects/ngx-floating-img-tester/src/app/shared/components/fit-section/fit-section.component.html
+++ b/projects/ngx-floating-img-tester/src/app/shared/components/fit-section/fit-section.component.html
@@ -1,4 +1,4 @@
 <section>
   <h2 class="sub-title">{{title}}</h2>
-  <div><ng-content></ng-content></div>
+  <div class="sec-wrapper"><ng-content></ng-content></div>
 </section>
