--- a/projects/ngx-floating-img-tester/src/app/shared/components/fit-section/fit-section.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/shared/components/fit-section/fit-section.component.scss
@@ -5,7 +5,7 @@
 }
 
 section {
-    margin-top: $main-padding;    
+    margin-top: $main-large-padding;  
 
     div::after {
         content: '';
