--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles//imports';
 
 header {
-    background: $theme-prim-color;
+    background: $theme-sec-color;
     & > div {
         overflow: hidden;
         padding: $main-padding 0;
@@ -12,19 +12,29 @@ header {
     
         .info-wrapper {
             width: 40%;
+            padding-right: $main-padding;
             h1 {
-                font-size: rem(24);
                 color: #fff;
+                border-bottom: none;
+                padding-top: $main-padding;
             }
             p {
-                color: #fff;
+                font-size: rem(16);
+                color: $theme-sec-var-color;
             }
         }
     
         .installation-wrapper {
-            padding: $main-padding;
             width: 60%;
-            background: rgba(#fff, 0.9);
+            padding: $main-padding;
+            background: rgba(#000, 0.2);
+            color: $theme-sec-var-color;
+            @include border-radius($main-radius);
+
+            .sub-title {
+                color: #fff;
+                border-color: $theme-sec-color;
+            }
 
             ul li:not(:first-child) {
                 padding-top: $main-padding;
@@ -35,20 +45,34 @@ header {
 
 #home-main-container {
     #demo-section {
-        margin-right: #{-$main-padding};
         &::after {
             content: '';
             display: block;
             clear: both;
         }
+
+        &::ng-deep {
+            .sec-wrapper {
+                margin-right: -#{$main-small-padding};
+            }
+        }
         
         .img-wrapper {
-            padding-right: $main-padding;
+            padding-right: $main-small-padding;
             width: 20%;
             float: left;
 
             & > div:not(:first-child) {
-                padding-top: $main-padding;
+                padding-top: $main-small-padding;
+            }
+        }
+
+        .more-info-wrapper {
+            clear: both;
+            padding-top: $main-padding;
+
+            a {
+                color: #42A5F5;
             }
         }
     }
